--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,3 +25,11 @@
 .btn-primary{
   @apply w-full text-sm font-medium text-white bg-violet-500 shadow-lg shadow-purple-600/5 p-[10px] rounded-md my-1 hover:bg-purple-600/15 hover:text-purple-600 ;
 }
+
+.card{
+  @apply bg-white p-6 rounded-2xl shadow-md shadow-gray-100 border border-gray-200/50;
+}
+
+.card-btn{
+  @apply flex items-center gap-3 text-[12px] font-medium
+}
